kfreebsd-11 (11.0~svn273432-1) UNRELEASED; urgency=medium

  * Team upload.
  * New upstream snapshot of -CURRENT
    - Fix for EN-14:05:
      ciss(4) potential data corruption bug (Closes: #748079)
    - Fix for EN-14:06:
      Triple fault on execve from 64-bit thread to 32-bit process
      (Closes: #748745)
    - Fix memory leak in sandboxed namei lookup. [SA-14:22]
      (CVE-2014-3711) (Closes: #766279)
  * DEB_HOST_ARCH_CPU on armel is arm;  update debian/rules detection
    and thereby correctly specify any-arm in debian/control too.

 -- Steven Chamberlain <steven@pyro.eu.org>  Tue, 20 May 2014 13:04:21 +0100

kfreebsd-11 (11.0~svn265310-1) experimental; urgency=medium

  * New upstream snapshot.
    - Fix for SA-14:08 / CVE-2014-3000 (TCP reassembly vulnerability).
      (Closes: #746954)
    - 904_dev_full.diff: Remove (superceded by upstream).
    - Adapt to upstream removal of eisa module (r264654).
      - B-D on freebsd-mk with MK_EISA support.
      - debian/installer/modules/scsi-modules: Disable ahc_eisa.

  [ Christoph Egger ]
  * Increase firmware size limit to 1MiB. This should be enough for at
    least iwlwifi firmware to safely load

 -- Robert Millan <rmh@debian.org>  Sun, 04 May 2014 12:04:51 +0200

kfreebsd-11 (11.0~svn264364-1) experimental; urgency=low

  * New upstream snapshot.

 -- Robert Millan <rmh@debian.org>  Sat, 12 Apr 2014 20:12:10 +0200

kfreebsd-11 (11.0~svn263651-1) experimental; urgency=low

  * New upstream snapshot.

 -- Robert Millan <rmh@debian.org>  Sat, 22 Mar 2014 23:43:21 +0100

kfreebsd-11 (11.0~svn262281-2) experimental; urgency=low

  * Remove -DWITHOUT_SSP kludge. Apparently SSP doesn't break QEMU
    anymore.
  * B-D on freebsd-buildutils with reliable kldxref.

 -- Robert Millan <rmh@debian.org>  Fri, 21 Feb 2014 22:56:18 +0100

kfreebsd-11 (11.0~svn262281-1) experimental; urgency=low

  * New upstream snapshot.
    - Switch to clang-3.4.

  * Support debug flag in DEB_BUILD_OPTIONS.